<resources>
    <string name="app_name">DrawMate</string>
    <string name="menu">Menu</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="pencil">pencil</string>
    <string name="tools">Tools</string>
    <string name="brush">brush</string>
    <string name="color_picker">Color Picker</string>
    <string name="layers">Layers</string>
    <string name="toolbarrestorebutton" translatable="false">restorebutton</string>
    <string name="brushes">Brushes</string>
    <string name="settings">Settings</string>
    <string name="brushesicon">brushesicon</string>
    <string name="previewstroke">previewstroke</string>
    <string name="basic">Basic</string>
    <string name="half_tone">Half Tone</string>
    <string name="brush_size">Brush Size</string>
    <string name="opacity">Opacity</string>
    <string name="squre">squre</string>
    <string name="circle">circle</string>
    <string name="line">line</string>
    <string name="new_sketch">New Sketch</string>
    <string name="save">Save</string>
</resources>