<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?attr/colorPrimary"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="13dp">

            <ImageButton
                android:id="@+id/btnMenu"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/menu"
                android:src="@drawable/menu" />

            <ImageButton
                android:id="@+id/btnUndo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/undo"
                android:src="@drawable/undo" />

            <ImageButton
                android:id="@+id/btnRedo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/redo"
                android:src="@drawable/redo" />

            <ImageButton
                android:id="@+id/btnTools"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/tools"
                android:src="@drawable/tools" />

            <ImageButton
                android:id="@+id/btnEraser"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/pencil"
                android:src="@drawable/eraser" />

            <ImageButton
                android:id="@+id/Brushbtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/brush"
                android:src="@drawable/brush" />

            <ImageButton
                android:id="@+id/btnColorPicker"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/color_picker"
                android:src="@drawable/color_wheel" />

            <ImageButton
                android:id="@+id/btnLayers"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/layers"
                android:src="@drawable/layer" />

        </LinearLayout>

    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/canvasContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.example.DrawMate.DrawingView
            android:id="@+id/drawingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <include
            android:id="@+id/brushPanel"
            layout="@layout/brush_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:translationY="-600dp"
            android:elevation="20dp" />

        <ImageButton
            android:id="@+id/btnRestoreToolbar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top|end"
            android:layout_margin="13dp"
            android:contentDescription="@string/toolbarrestorebutton"
            android:src="@drawable/layer1"
            android:background="@android:color/transparent"
            android:visibility="gone"
            android:elevation="30dp" />

    </FrameLayout>


</LinearLayout>
