<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/brushPanelLayout"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:orientation="vertical"
    android:background="#F7F7F7"
    android:elevation="12dp"
    android:padding="8dp">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/brushTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabIndicatorColor="?attr/colorOnPrimary"
        app:tabSelectedTextColor="?attr/colorOnPrimary"
        app:tabTextColor="?attr/colorOnPrimary">

        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/brushes" />
        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/settings" />
    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/colorPrimary"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/selectedBrushIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/brushesicon" />

        <TextView
            android:id="@+id/selectedBrushName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/brushPreview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="0dp"
        android:background="?attr/colorPrimary"
        android:adjustViewBounds="true"
        android:contentDescription="@string/previewstroke" />

    <FrameLayout
        android:id="@+id/brushContentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"/>
</LinearLayout>